basic error handling

--- a/client/src/components/quiz.scss
+++ b/client/src/components/quiz.scss
@@ -5,3 +5,14 @@ h1 {
 #submit-button {
     display: none;
 }
+
+.error {
+    position: relative;
+    animation: shake .1s linear;
+    animation-iteration-count: 3;
+}
+
+@keyframes shake {
+    0% { left: -5px; }
+    100% { right: -5px; }
+}
